--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             </div>
         </div>
     </nav>
+    <header class="jumbotron jumbotron-fluid">
+        <div class="container-fluid text-center"> 
+           <h1 class="display-3">The Best Solution for Your Business</h1>
+           <p class="lead pb-4">We help you maximize performance and build a healthy organization.</p>
+           <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn More</a></p>
+        </div>
+    </header>    
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
