--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
            </div>
         </div>
      </section>
+     <section class="container-fluid text-center py-4 mt-4" id="contact">
+        <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
+        <p class="lead pb-3">Send us a message and we will get back to 
+        you as soon as possible.</p>
+        <a href="#" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
+     </section>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
