--- a/index.html
+++ b/index.html
@@ -94,6 +94,11 @@
         you as soon as possible.</p>
         <a href="#" class="btn btn-primary btn-lg mb-4" role="button">Contact us</a>
      </section>
+     <footer class="py-3 bg-light">
+        <div class="container">
+           <p class="text-center">Copyright &copy; Hello Consultancy 2019</p>
+        </div>
+     </footer>
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
