--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="Website/style.css" rel="stylesheet">
-    <title>Bootstrap demo</title>
+    <title>Ernesto Cancel</title>
   </head>
   <body>
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Hello Consultancy</a>
+            <a class="navbar-brand" href="#">Data Analytics</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" 
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
             aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +41,7 @@
            <p class="lead pb-4">We help you maximize performance and build a healthy organization.</p>
            <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn More</a></p>
         </div>
-    </header>
+    </header>>
     <section id="services" class="container">
         <h2 class="display-4 text-center mt-5 mb-3">Our Services</h2>
         
