--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             </div>
         </div>
     </nav>
+    <!--Jumbotron-->
     <header class="jumbotron jumbotron-fluid">
         <div class="container-fluid text-center"> 
            <h1 class="display-3">The Best Solution for Your Business</h1>
@@ -42,6 +43,7 @@
            <p><a href="#" class="btn btn-primary btn-lg" role="button">Learn More</a></p>
         </div>
     </header>>
+    <!--3-Column Section-->
     <section id="services" class="container">
         <h2 class="display-4 text-center mt-5 mb-3">Our Services</h2>
         
@@ -89,6 +91,7 @@
            </div>
         </div>
      </section>
+     <!--Contact Footer-->
      <section class="container-fluid text-center py-4 mt-4" id="contact">
         <h2 class="display-4 pb-4 my-4">Get in touch with us today!</h2>
         <p class="lead pb-3">Send us a message and we will get back to 
@@ -97,10 +100,10 @@
      </section>
      <footer class="py-3 bg-light">
         <div class="container">
-           <p class="text-center">Copyright &copy; Hello Consultancy 2019</p>
+           <p class="text-center">Copyright &copy; Ernesto Cancel 2024</p>
         </div>
      </footer>
-    <h1>Hello, world!</h1>
+   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
